# SafeManuallyDrop

./: Cargo.toml  README.md
.github/workflows/: CI.yml
examples/: abort.rs  combo_drop.rs  counter.rs  easy.rs  easy2.rs  easy_struct.rs  hook.rs
src/: events.rs  extended_debug_assertions.rs  flags.rs  lib.rs  macro_codegen.rs  macro_internalchecks.rs  panic.rs  state.rs
src/beh/: auto.rs  safe.rs  unsafe.rs
src/core/: flags.rs  hook.rs  state.rs
src/core/trig/: abort.rs  auto_detect_deftrig.rs  counter.rs  fix_deftrig.rs  hook.rs  loop.rs  mod.rs  panic.rs
src/core/trig/def_detect/: auto_detect_deftrig.rs  fix_deftrig.rs
tests/: all.rs  compare.rs
